[feature/responsive] fix alignment and add css for sp nav

--- a/laravel/public/css/app.css
+++ b/laravel/public/css/app.css
@@ -49,23 +49,32 @@ body {
     width: 100%;
     top: 100%;
     right: 0;
-    padding: 4% 25%;
-    background-color: #FFFFFF;
+    padding: 4% 25% 7% 26%;
+    background-color: #1492e6;
     box-shadow: 0px 3px 6px rgb(0 0 0 / 10%);
 }
 
 .top-nav ul li {
+    border-radius: 8px;
+    padding: 3% 10%;
     text-align: left;
-    padding-left: 2vw;
+    padding-left: 6vw;
 }
 
-.top-nav ul li {
-    margin-bottom: 10%;
+.top-nav ul li:hover {
+    background-color: #ffffff;
+    cursor: pointer;
+}
+
+.top-nav ul li:hover .db-icon,
+.top-nav ul li:hover .tb-sidebar-txt,
+.top-nav ul li:hover .profile-name {
+    color: #1492e6;
 }
 
 .top-nav ul li a {
     text-decoration: none;
-    color: #000000;
+    font-size: 3.750vw;
 }
 
 .top-nav ul li img {
@@ -74,6 +83,8 @@ body {
 
 .top-nav ul li a p {
     display: inline-block;
+    font-size: 3vw;
+    color: #ffffff;
 }
 
 .top-nav ul li:not(:first-child) {
@@ -488,20 +499,16 @@ body {
     }
 
     .logo {
-        width: 50vw;
+        width: 45vw;
         margin-bottom: 1vh;
     }
 
     .profile-picture {
         width: 7vw;
         height: 7vw;
-        margin-right: 4vw;   
+        margin-right: 4vw;
     }
 
-    .db-icon {
-        margin-right: 5vw;
-    }
-    
     .sidebar {
         display: none;
     }
@@ -513,11 +520,14 @@ body {
     }
 
     .db-icon {
-        font-size: 5vw;
+        font-size: 4vw;
+        padding-left: 1.5vw;
+        margin-right: 4.5vw;
+        color: #ffffff;
     }
 
     .tb-sidebar-txt {
-        font-size: 4vw;
+        font-size: 3.4vw;
     }
 
     .nav {
